--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,12 +6,12 @@
     <div class="row">
       <div class="col-md-2">Filter By:</div>
       <div class="col-md-4">
-        <input type="text" />
+        <input type="text" [(ngModel)]="filterValue" />
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <h4>Filter By:</h4>
+        <h4>Filter By: {{ filterValue }}</h4>
       </div>
     </div>
     <div class="table-responsive">
@@ -19,8 +19,8 @@
         <thead>
           <tr>
             <th>
-              <button class="btn btn-primary">
-                Show Image
+              <button class="btn btn-primary" (click)="toggleImage()">
+                {{ showImage ? "Hide" : "Show" }} Image
               </button>
             </th>
             <th>Product</th>
@@ -32,11 +32,19 @@
         </thead>
         <tbody>
           <tr *ngFor="let product of products">
-            <td>{{ product.imageUrl }}</td>
+            <td>
+              <img
+                *ngIf="showImage"
+                [src]="product.imageUrl"
+                [alt]="product.productName"
+                [title]="product.productName"
+                [ngStyle]="{ width: '50px' }"
+              />
+            </td>
             <td>{{ product.productName }}</td>
-            <td>{{ product.productCode }}</td>
+            <td>{{ product.productCode | lowercase }}</td>
             <td>{{ product.releaseDate }}</td>
-            <td>{{ product.price }}</td>
+            <td>{{ product.price | currency: "USD":"symbol":"1.2-2" }}</td>
             <td>{{ product.starRating }}</td>
           </tr>
         </tbody>
