--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,12 +6,12 @@
     <div class="row">
       <div class="col-md-2">Filter By:</div>
       <div class="col-md-4">
-        <input type="text" [(ngModel)]="filterValue" />
+        <input type="text" [(ngModel)]="listFilter" />
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <h4>Filter By: {{ filterValue }}</h4>
+        <h4>Filter By: {{ _listFilter }}</h4>
       </div>
     </div>
     <div class="table-responsive">
@@ -31,7 +31,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of products">
+          <tr *ngFor="let product of filteredProducts">
             <td>
               <img
                 *ngIf="showImage"
@@ -42,7 +42,9 @@
               />
             </td>
             <td>{{ product.productName }}</td>
-            <td>{{ product.productCode | lowercase }}</td>
+            <td>
+              {{ product.productCode | lowercase | convertToSpaces: "-" }}
+            </td>
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency: "USD":"symbol":"1.2-2" }}</td>
             <td>{{ product.starRating }}</td>
