Send parameter in router and validate using gaurd canActive()

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -41,7 +41,11 @@
                 [ngStyle]="{ width: '50px' }"
               />
             </td>
-            <td>{{ product.productName }}</td>
+            <td>
+              <a [routerLink]="['/products', product.productId]">
+                {{ product.productName }}
+              </a>
+            </td>
             <td>
               {{ product.productCode | lowercase | convertToSpaces: "-" }}
             </td>
