--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -1,7 +1,5 @@
 <div class="card">
-  <div class="card-header">
-    {{ pageTitle }}
-  </div>
+  <div class="card-header">{{ pageTitle }}: {{ product?.name }}</div>
   <div class="card-body"></div>
   <div class="card-footer">
     <button class="btn btn-outline-secondary" (click)="onBack()">
