Some use cases of ngForm

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,4 @@
-<p>welcome works!</p>
+<h1>This is welcome screen</h1>
+<p>
+  Make sure to run 'https://github.com/HashirHussain/fake-db' for REST API calls
+</p>
