--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -28,6 +28,7 @@
             <th>Available</th>
             <th>Price</th>
             <th>5 Star Rating</th>
+            <th>Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -56,6 +57,20 @@
                 [rating]="product.starRating"
                 (ratingClicked)="onRatingClicked($event)"
               ></app-star>
+            </td>
+            <td>
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button
+                  [routerLink]="['/products/edit', product.id]"
+                  class="btn btn-outline-secondary btn-sm"
+                  title="Edit"
+                >
+                  <i class="fa fa-pencil"></i>
+                </button>
+                <button class="btn btn-outline-danger btn-sm" title="Delete">
+                  <i class="fa fa-trash"></i>
+                </button>
+              </div>
             </td>
           </tr>
         </tbody>
